test/compilable/extra-files/hello.d
import core.stdc.stdio;
int main()
{
    printf("hello\n");
    return 0;
}
